--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-    background-color: #ccc;
+    background-color: pink;
     border: 2px solid black;
     text-align: center;
     margin: 0;
@@ -17,6 +17,17 @@ button {
     padding: 12px 26px;
     margin: 10px 20px;
     font-size: 24px;
-    background-color: rgb(90, 90, 90);
-    color: rgb(226, 226, 226);
+    background-color: rgb(255, 118, 118);
+    color: rgb(255, 255, 255);
+    transition: 0.15s;
+}
+
+button:hover {
+    background-color: rgb(248, 105, 105);
+    transition: 0.15s;
+}
+
+button:active {
+    background-color: rgba(248, 133, 133, 0.6);
+    transition: 0.15s;
 }
