--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgb(149, 149, 149);
 }
 
 .container {
